--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,14 +30,15 @@
 
 #exTab3 .nav-pills > li > a {
     border-radius: 20px 20px 0 0 ;
-    padding: 11px 30px;
+    padding: 0px 0px;
     
   }
 
 #exTab3 .tab-content {
     color: white;
     background-color: #428bca;
-    padding : 5px 15px;
+    padding : 5px 20px;
+    padding-top: 20px;
     background: -moz-linear-gradient(top, rgba(51,122,183,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
     background: -webkit-linear-gradient(top, rgba(51,122,183,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
     background: linear-gradient(to bottom, rgba(51,122,183,1) 0%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -112,3 +113,208 @@ li.active {
    padding-right: 5px; 
   }
  
+
+
+
+
+  .container-fluid{color: white;}
+  
+  body{font-family: sans-serif; width: 100%; height: 100%;margin: 0px;}
+  
+  .img1{float: left; padding: 5px;}
+  .clearfix::after{content: "";clear: both; display: table;}
+  
+  .grid1{border: solid black;
+      border-bottom: 6px black;
+  padding: 5px;
+  }
+  
+  
+  img.img1{
+      max-height: 100%;
+      max-width: 100%;
+  }
+  .boarder1{
+      border: solid black;
+      border-width: 2px 2px 2px 2px;
+  }
+  
+  input.form-control {
+      height: 1.5em;
+      }
+      .nav {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      height: 20px;
+      }
+      
+      .nav-text {
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      }
+      
+      .navbar-collapse {
+      height: 22vh;
+      }
+  .size123{
+      height: 400px;
+  }
+  
+  .center1{
+      text-align:center;
+      color: rgb(97, 197, 227);
+      font-size:20; 
+  }
+  
+  .paddingtop{
+      padding-top:50px;
+      padding-right: 50px;
+      padding-left: 50px;
+  }
+  
+  .body123{
+      width: 100%;
+  }
+  .jumbotron{
+      padding: 5px;
+  }
+  
+  .padding0{
+      padding: 0;
+  }
+  
+  
+  * {
+  box-sizing: border-box;
+  }
+  
+  .row > .column {
+  padding: 0 8px;
+  }
+  
+  .row:after {
+  content: "";
+  display: table;
+  clear: both;
+  }
+  
+  .column {
+  float: left;
+  width: 25%;
+  }
+  
+  /* The Modal (background) */
+  .modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+  position: relative;
+  background-color: transparent;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 1200px;
+  }
+  
+  /* The Close Button */
+  .close {
+  color: white;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+  color: #999;
+  text-decoration: none;
+  cursor: pointer;
+  }
+  
+  .mySlides {
+    display: block;
+    margin: auto;
+    width: 60%;
+  }
+  
+  .cursor {
+  cursor: pointer
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: gray;
+  font-weight: bold;
+  font-size: 20px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+  }
+  
+  img {
+  margin-bottom: -4px;
+  }
+  
+  .caption-container {
+  text-align: center;
+  background-color: black;
+  padding: 2px 16px;
+  color: white;
+  }
+  
+  .demo {
+  opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+  opacity: 1;
+  }
+  
+  img.hover-shadow {
+  transition: 0.3s
+  }
+  
+  .hover-shadow:hover {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19)
+  }
